--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,18 +38,25 @@ jobs:
       - name: Build and push the release images
         run: ./scripts/release.sh --skip-publish
 
-      - name: Get built images
-        id: get-images
+      - name: Save images
         run: |
-          images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "<none>" | head -10)
-          echo "images<<EOF" >> $GITHUB_OUTPUT
-          echo "$images" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "<none>" | head -10 | sort -u)
+          while IFS= read -r image; do
+            docker save $image -o $image.tar
+          done <<< "$unique_images"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: images-${{ matrix.runner }}
+          path: ./*.tar
 
   push-multiarch:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      # Do not define a name to download everything
+      - uses: actions/download-artifact@v4
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -57,20 +64,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Import & Push produced images
+      - name: Import built images
         run: |
-          images="${{ needs.build.outputs.images }}"
+          for image in $(ls *.tar); do
+            docker import $image
+          done
 
-          # Extract unique image:tag combinations
-          unique_images=$(echo "$images" | head -n $(echo "$images" | wc -l | awk '{print $1/2}'))
+      - name: Tag & Push produced images
+        run: |
+          images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "<none>" | head -10 | sort -u)
 
           while IFS= read -r image; do
             [[ -z "$image" ]] && continue
-            image_name=$(echo $image | cut -d':' -f1)
-            image_tag=$(echo $image | cut -d':' -f2)
-
-            ghcr_base="ghcr.io/${{ github.repository_owner }}/openebs/${image_name##*/}:${image_tag}"
-
-            docker manifest create ${ghcr_base}
-            docker manifest push ${ghcr_base}
+            new_tag="ghcr.io/${{ github.repository_owner }}/openebs/$image"
+            echo "Pushing image '$image' to '$new_tag'"
+            docker tag $image $new_tag
+            docker push $new_tag
+            echo "Pushed '$new_tag'"
           done <<< "$unique_images"
