--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,7 +44,7 @@ jobs:
           mkdir -p openebs
           for image in $images; do
             echo "Exporting image '$image'"
-            docker save $image -o $image.tar
+            docker save $image -o ${image//:}.tar
           done
 
       - uses: actions/upload-artifact@v4
