--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
           - ubuntu-24.04-arm
     runs-on: ${{ matrix.runner }}
     outputs:
-      images: ${{ steps.get-images.outputs.images }}
+      images: ${{ steps.push-images.outputs.images }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -46,8 +46,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push single-arch images
+        id: push-images
         run: |
           images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "<none>" | head -10 | sort -u)
+          echo "images=$images" >> "$GITHUB_OUTPUT"
           mkdir -p openebs
           for image in $images; do
             [[ "${{ matrix.runner }}" == *-arm ]] && arch="arm64" || arch="amd64"
@@ -55,4 +57,28 @@ jobs:
             echo "Pushing image '$image' to '$new_tag'"
             docker tag $image $new_tag
             docker push $new_tag
+          done
+  merge:
+    permissions:
+      packages: write
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull, merge & push images
+        run: |
+          for image in {{ needs.build.outputs.images }}; do
+            echo "Merging image '$image'"
+            docker pull "ghcr.io/${{ github.repository_owner }}/$image-amd64"
+            docker pull "ghcr.io/${{ github.repository_owner }}/$image-arm64"
+            docker manifest create "ghcr.io/${{ github.repository_owner }}/$image" \
+              --amend "ghcr.io/${{ github.repository_owner }}/$image-amd64" \
+              --amend "ghcr.io/${{ github.repository_owner }}/$image-arm64"
+            docker push "ghcr.io/${{ github.repository_owner }}/$image"
           done
