--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,7 +49,7 @@ jobs:
         id: push-images
         run: |
           images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "<none>" | sort -u | tr '\n' ' ')
-          echo "images='$images'" >> "$GITHUB_OUTPUT"
+          echo "images=$images" >> "$GITHUB_OUTPUT"
           mkdir -p openebs
           for image in $images; do
             [[ "${{ matrix.runner }}" == *-arm ]] && arch="arm64" || arch="amd64"
