--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,13 +17,17 @@ jobs:
         runner:
           - ubuntu-24.04
           - ubuntu-24.04-arm
+        repo:
+          - openebs/mayastor
+          - openebs/mayastor-extensions
+          - openebs/mayastor-control-plane
     runs-on: ${{ matrix.runner }}
     outputs:
       images: ${{ steps.push-images.outputs.images }}
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: openebs/mayastor-extensions
+          repository: ${{ matrix.repo }}
           ref: ${{ inputs.tag }}
           submodules: 'recursive'
           fetch-depth: 0
@@ -75,7 +79,8 @@ jobs:
         run: |
           # For some reason gh doesn't like the space delimted images string
           # So we pass it as a literal and echo it so that bash can iterate over it
-          for image in $(echo ${{ needs.build.outputs.images }}); do
+          images=$(echo ${{ needs.build.outputs.images }} | tr ' ' '\n' | sort -u)
+          for image in $images; do
             echo "Merging image '$image'"
             docker pull "ghcr.io/${{ github.repository_owner }}/$image-amd64"
             docker pull "ghcr.io/${{ github.repository_owner }}/$image-arm64"
