--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
       matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on: ${{ matrix.runner }}
     outputs:
-      images-${{ matrix.repo }}: ${{ steps.push-images.outputs.images }}
+      ${{ matrix.repo }}-images: ${{ steps.push-images.outputs.images }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -97,7 +97,7 @@ jobs:
         run: |
           # For some reason gh doesn't like the space delimted images string
           # So we pass it as a literal and echo it so that bash can iterate over it
-          images=$(echo ${{ needs.build.outputs[format('images-{0}', matrix.repo)] }} | tr ' ' '\n' | sort -u)
+          images=$(echo ${{ needs.build.outputs[format('{0}-images', matrix.repo)] }} | tr ' ' '\n' | sort -u)
           for image in $images; do
             echo "Merging image '$image'"
             docker pull "ghcr.io/${{ github.repository_owner }}/$image-amd64"
