--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,8 +35,6 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on: ${{ matrix.runner }}
-    outputs:
-      ${{ strategy.job-index }}-images: ${{ steps.push-images.outputs.images }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -74,7 +72,17 @@ jobs:
             echo "Pushing image '$image' to '$new_tag'"
             docker tag $image $new_tag
             docker push $new_tag
+
+            # Store the base image name for later merging
+            echo "$image" >> artifacts/images-${{ matrix.repo }}-$arch.txt
           done
+
+      - name: Upload image list artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: images-${{ matrix.repo }}-${{ matrix.runner == 'ubuntu-24.04-arm' && 'arm64' || 'amd64' }}
+          path: artifacts/images-${{ matrix.repo }}-${{ matrix.runner == 'ubuntu-24.04-arm' && 'arm64' || 'amd64' }}.txt
+
   merge:
     permissions:
       packages: write
@@ -86,6 +94,11 @@ jobs:
       - setup
       - build
     steps:
+      - name: Download artifacts for this repo
+        uses: actions/download-artifact@v4
+        with:
+          pattern: images-${{ matrix.repo }}-*
+          merge-multiple: true
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -95,9 +108,7 @@ jobs:
 
       - name: Pull, merge & push images
         run: |
-          # For some reason gh doesn't like the space delimted images string
-          # So we pass it as a literal and echo it so that bash can iterate over it
-          images=$(echo ${{ needs.build.outputs[format('{0}-images', matrix.repo)] }} | tr ' ' '\n' | sort -u)
+          images=$(cat images-${{ matrix.repo }}-*.txt | tr ' ' '\n' | sort -u)
           for image in $images; do
             echo "Merging image '$image'"
             docker pull "ghcr.io/${{ github.repository_owner }}/$image-amd64"
@@ -106,4 +117,5 @@ jobs:
               --amend "ghcr.io/${{ github.repository_owner }}/$image-amd64" \
               --amend "ghcr.io/${{ github.repository_owner }}/$image-arm64"
             docker manifest push "ghcr.io/${{ github.repository_owner }}/$image"
+            echo "✅ Successfully created multi-arch manifest for $image"
           done
