--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,7 +65,7 @@ jobs:
         run: |
           images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "<none>" | sort -u | tr '\n' ' ')
           echo "images='$images'" >> "$GITHUB_OUTPUT"
-          mkdir -p openebs
+          mkdir -p artifacts
           for image in $images; do
             [[ "${{ matrix.runner }}" == *-arm ]] && arch="arm64" || arch="amd64"
             new_tag="ghcr.io/${{ github.repository_owner }}/$image-$arch"
@@ -81,7 +81,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: images-${{ matrix.repo }}-${{ matrix.runner == 'ubuntu-24.04-arm' && 'arm64' || 'amd64' }}
-          path: artifacts/images-${{ matrix.repo }}-${{ matrix.runner == 'ubuntu-24.04-arm' && 'arm64' || 'amd64' }}.txt
+          path: artifacts/images-*.txt
 
   merge:
     permissions:
