--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,7 +65,7 @@ jobs:
       - name: Push single-arch images
         id: push-images
         run: |
-          images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep "ghcr.io/${{ github.repository_owner }}" | sort -u | tr '\n' ' ')
+          images=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "<none>" | sort -u | tr '\n' ' ')
           echo "images='$images'" >> "$GITHUB_OUTPUT"
           mkdir -p artifacts
           for image in $images; do
@@ -77,13 +77,15 @@ jobs:
 
             # Store the base image name for later merging
             echo "$image" >> artifacts/images-${{ matrix.repo }}-${arch}.txt
+            echo "✅ Successfully pushed single-arch image for $image"
+            cat artifacts/images-${{ matrix.repo }}-${arch}.txt
           done
 
       - name: Upload image list artifact
         uses: actions/upload-artifact@v4
         with:
           name: images-${{ matrix.repo }}-${{ matrix.runner == 'ubuntu-24.04-arm' && 'arm64' || 'amd64' }}
-          path: artifacts/images-${{ matrix.repo }}-${{ matrix.runner == 'ubuntu-24.04-arm' && 'arm64' || 'amd64' }}.txt
+          path: artifacts/images-*.txt
 
   merge:
     permissions:
